# optimlpse-2026

./: .gitignore  tmp.txt
projects/botorch_tutorials/notebooks/: TuRBO.ipynb  custom_BoTorch_models.ipynb
projects/gaussian/: .gitignore  environment.yml  pyproject.toml
projects/gaussian/gaussian.egg-info/: PKG-INFO  SOURCES.txt
projects/gaussian/gaussian/surrogate/: gp.py
projects/gaussian/notebooks/solutions/: surrogate.ipynb
projects/safebo_implementations/notebooks/: GPs-TR.ipynb  GoOSE.ipynb  SafeOpt.ipynb  StableOpt.ipynb
